--- a/WebApplication21/Views/User/Index.cshtml
+++ b/WebApplication21/Views/User/Index.cshtml
@@ -7,8 +7,8 @@
 <div class="container mt-5">
     <div class="row">
         <div class="col-md-12">
-            <a href="#" class="btn btn-primary">Add Products</a>
-            <a href="#" class="btn btn-primary">View Products</a>
+            <a href="/User/AddProducts" class="btn btn-primary">Add Products</a>
+            <a href="/User/ListProducts" class="btn btn-primary">View Products</a>
             <a href="#" class="btn btn-primary">Create Bill</a>
             @{
                 if (TempData["isLogged"] == "no")
